--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Document</title>
 </head>
 <body>
-    안녕하세요
+  <div id="container">
+    <header>
+      <div id="logo"></div>
+      <nav></nav>
+    </header>
+    <div id="slideShow"></div>
+    <div id="contents">
+      <div id="tabMenu"></div>
+      <div id="links"></div>
+    </div>
+    <footer></footer>
+  </div>
 </body>
 </html>
