--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
   <div id="container">
     <header>
       <div id="logo">
-        <a href="index.html"><h1>DreamCom</h1></a>
+        <a href="index.html"><h1>MisungCom</h1></a>
       </div>
       <nav>
         <ul id="topMenu">
           <li>
-            <a href="#">단체 여행<span>▼</span></a>
+            <a href="#">프로젝트<span>▼</span></a>
             <ul>
-              <li><a href="#">회사 연수</a></li>
-              <li><a href="#">수학 여행</a></li>
+              <li><a href="#">똥피하기 게임</a></li>
+              <li><a href="#">버블 버블</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">맞춤 여행<span>▼</span></a>
+            <a href="#">보유 스킬<span>▼</span></a>
             <ul>
-              <li><a href="#">4.3 평화기행</a></li>
-              <li><a href="#">곶자왈 체험</a></li>
-              <li><a href="#">힐링 워크숍</a></li>
+              <li><a href="#">파이썬</a></li>
+              <li><a href="#">인공지능</a></li>
+              <li><a href="#">자바스크립트</a></li>
+              <li><a href="#">깃허브</a></li>
             </ul>
           </li>
           <li><a href="#">갤러리</a></li>
@@ -35,12 +36,21 @@
 
       </nav>
     </header>
-    <div id="slideShow"></div>
+    <div id="slideShow">
+      <div id="slides">
+        <img src="images/photo-1.jpg" alt="">
+        <img src="images/photo-2.jpg" alt="">
+        <img src="images/photo-3.jpg" alt="">       
+        <button id="prev">&lang;</button>
+        <button id="next">&rang;</button>
+      </div>
+    </div>
     <div id="contents">
       <div id="tabMenu"></div>
       <div id="links"></div>
     </div>
     <footer></footer>
   </div>
+<script src="js/slideeshow.js">  </script>
 </body>
 </html>
