--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <ul>
               <li><a href="#">파이썬</a></li>
               <li><a href="#">인공지능</a></li>
+              <li><a href="#">HTML/CSS</a></li>
               <li><a href="#">자바스크립트</a></li>
               <li><a href="#">깃허브</a></li>
             </ul>
@@ -51,6 +52,6 @@
     </div>
     <footer></footer>
   </div>
-<script src="js/slideeshow.js">  </script>
+<!-- <script src="js/slideeshow.js">  </script> -->
 </body>
 </html>
